examples/errors/ModuleMultipleModulesError.flx
module Errors.ModuleMultipleModulesError { fun a() { 1; } }
module Errors.AnotherModule { fun b() { 2; } }
